@@ -1,7 +1,12 @@
 //cancelable in Global := false
 
-javaOptions in Global ++= Seq("--add-modules", "jdk.incubator.vector")
-javacOptions in Global ++= Seq("--add-modules", "jdk.incubator.vector")
+val jvmopts = Seq(
+  "--add-modules", "jdk.incubator.vector",
+  "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+)
+
+javaOptions in Global ++= jvmopts
+javacOptions in Global ++= jvmopts
 
 scalacOptions ++= Seq("-feature")
 
@@ -21,7 +26,7 @@ lazy val main = (project in file("."))
     libraryDependencies ++= Seq(
       "qa.hedgehog" %% "hedgehog-core" % hedgehogVersion % "test",
       "qa.hedgehog" %% "hedgehog-runner" % hedgehogVersion % "test",
-      "qa.hedgehog" %% "hedgehog-sbt" % hedgehogVersion % "test"
+      "qa.hedgehog" %% "hedgehog-sbt" % hedgehogVersion % "test",
     ),
     testOptions += Tests.Argument(TestFrameworks.JUnit, "-a", "-v"),
     testFrameworks += TestFramework("hedgehog.sbt.Framework")
@@ -31,6 +36,9 @@ lazy val bench = (project in file("bench"))
   .dependsOn(main)
   .enablePlugins(JmhPlugin)
   .settings(
+    libraryDependencies ++= Seq(
+      "com.google.guava" % "guava" % "33.3.0-jre"
+    ),
     //Jmh / javaOptions ++= Seq("-Xss32M", "--add-modules", "jdk.incubator.vector"),
     //Jmh / JmhPlugin.generateJmhSourcesAndResources / fork := true,
   )
